--- a/main_page.html
+++ b/main_page.html
@@ -20,13 +20,14 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="all_articles.html">All Articles</a></li>
-            <li><a href="section.html">Other Informations</a></li>
         </ul>
     </nav>
     <main>
-        <h2>Home</h2>
-        <p>Here you can find all the latest news about bread.</p>
-        
+        <header>
+            <h2>Home</h2>
+            <p>Here you can find all the latest news about bread.</p>
+        </header>
+
         <article>
             <header>
             <h3>How to make natural yeast!</h3>
